# neurips-PromptDialog

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
cli/: podcast.py  tts.py
demo/: app.js  index.html  styles.css
runtime/vllm/: Dockerfile
soulxpodcast/engine/: llm_engine.py
soulxpodcast/eval/: inference.py  ttsd_infer.py
soulxpodcast/eval/data/custom_random/: random_emo_seedtts.jsonl
soulxpodcast/eval/ttsd/: ttsd_eval_en.jsonl  ttsd_eval_zh.jsonl
soulxpodcast/models/: soulxpodcast.py
soulxpodcast/utils/: dataloader.py  infer_utils.py  text.py
