[project]
name = "soulx-rebuild"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.10.1",
    "deepspeed>=0.18.8",
    "diffusers>=0.36.0",
    "einops>=0.8.2",
    "gradio>=6.8.0",
    "hyperpyyaml>=1.2.3",
    "librosa>=0.11.0",
    "modelscope>=1.34.0",
    "numba>=0.64.0",
    "numpy==1.26.4",
    "onnxruntime-gpu>=1.24.2",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "s3tokenizer>=0.3.0",
    "scipy>=1.15.3",
    "setuptools<81",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "tiktoken>=0.9.0",
    "torch==2.7.1",
    "torchaudio[ffmpeg]==2.7.1",
    "transformers==4.51.3",
    "triton>=3.0.0",
    "pyarrow>=18.1.0",
    "omegaconf>=2.3.0",
    "conformer==0.3.2",
    "matplotlib>=3.7.5",
    "pyworld>=0.3.4",
    "x-transformers>=2.16.2",
    "openai-whisper>=20250625",
    "swanlab>=0.7.11",
    "inflect>=7.5.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
